force-app/main/default/objects/Account/fields/ermt__AccountCategory__c.field-meta.xml
<CustomField>
    <fullName>ermt__AccountCategory__c</fullName>
    <label>組織・部門 分類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自社内</fullName>
            </value>
            <value>
                <fullName>グループ会社</fullName>
            </value>
            <value>
                <fullName>社外ステークホルダー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>