force-app/main/default/objects/Account/fields/ermt__ERMTUser__c.field-meta.xml
<CustomField>
    <fullName>ermt__ERMTUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERMTユーザ</label>
    <type>Checkbox</type>
</CustomField>