force-app/main/default/objects/Account/fields/ermt__MailAddress__c.field-meta.xml
<CustomField>
    <fullName>ermt__MailAddress__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>