force-app/main/default/objects/Account/fields/ermt__OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>ermt__OrganizationCode__c</fullName>
    <externalId>true</externalId>
    <label>組織・部門コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>