force-app/main/default/objects/Account/fields/ermt__ParentOrganization__c.field-meta.xml
<CustomField>
    <fullName>ermt__ParentOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>上位組織・部門</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>子組織・部門</relationshipLabel>
    <relationshipName>OrganizationRelation</relationshipName>
    <type>Lookup</type>
</CustomField>