force-app/main/default/objects/Account/fields/ermt__RiskClassChartRacDataLabelBackColor__c.field-meta.xml
<CustomField>
    <fullName>ermt__RiskClassChartRacDataLabelBackColor__c</fullName>
    <description>16進トリプレット表記（#rrggbb形式）のカラーコードで指定します。</description>
    <inlineHelpText>16進トリプレット表記（#rrggbb形式）のカラーコードで指定します。</inlineHelpText>
    <label>リスク分類チャート（リスクアセスメント分類軸）のデータラベルの背景色</label>
    <length>7</length>
    <type>Text</type>
</CustomField>