force-app/main/default/objects/Account/fields/ermt__TextName__c.field-meta.xml
<CustomField>
    <fullName>ermt__TextName__c</fullName>
    <label>組織・部門名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>