force-app/main/default/objects/Account/recordTypes/ermt__BranchLocationRecordType.recordType-meta.xml
<RecordType>
    <fullName>ermt__BranchLocationRecordType</fullName>
    <active>true</active>
    <label>部門・場所</label>
</RecordType>