force-app/main/default/objects/Account/recordTypes/ermt__OrganizationRecordType.recordType-meta.xml
<RecordType>
    <fullName>ermt__OrganizationRecordType</fullName>
    <active>true</active>
    <label>組織</label>
</RecordType>